--- a/index.html
+++ b/index.html
@@ -2,81 +2,67 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <title>FoundationDriven</title>
-        <meta name="description" content="">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+<head>
+	<meta charset="utf-8">
+	<title>FoundationDriven</title>
+	<meta name="description" content="">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/fullpage.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/tooltipster.css" />
+</head>
 
-	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	    	<div class="container">
-	        	<div class="navbar-header">
-	          		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-			            <span class="sr-only">Toggle navigation</span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-			            <span class="icon-bar"></span>
-	          		</button>
-	          		<a class="navbar-brand" href="index.html"><span class="lobster">Foundation</span><span class="os_light">Driven</span></a>
-	        	</div>
-	        	<div id="navbar" class="navbar-collapse collapse">
-	          		<ul class="nav navbar-nav">
-			            <li><a href="#about"><span class="glyphicon glyphicon-align-left" aria-hidden="true"></span> Projects</a></li>
-			            <li><a href="#about"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> CI</a></li>
-			            <li><a href="#contact"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> API Docs</a></li>
-			            <li><a href="#contact"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Github</a></li>
-	          		</ul>
-	        	</div>
-	      	</div>
-	    </nav>
-
-	    <header id="header">
-	    	<section class="header_text container">
-	    		<h1><span class="lobster">Foundation</span><span class="os_light">Driven</span></h1>
-	    		<p>
-	    			FoundationDriven is a team of collaborators, which focuses on plugins and mods for
-	    			Sponge servers. We develop Foundation, Sponge.js and Scrub.
-	    		</p>
-	    	</section>
-	    </header>
-
-	    <section id="projects" class="container">
-			<div class="row">
-				<div class="col-md-12" id="projects-holder" style="text-align: center;">
-					<h1 style="margin-top: 50px;"><span class="lobster">Foundation</span><span class="os_light">Projects</span></h1>
-					<hr />
+<body>
+	<!--[if lt IE 7]>
+			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<![endif]-->
+	<div id="fullpage">
+		<div class="section" id="section1">
+			<div class="sectionMain">
+				<h1 id="foundationText">Foundation</h1>
+				<h2 id="drivenText">Driven</h2>
+				<p id="topSectionSubtitle">FoundationDriven is a team of collaborators, which focuses on plugins and mods for Sponge servers.
+					<br>We develop Foundation, Sponge.js and Scrub.</p>
+			</div>
+		</div>
+		<div class="section" id="section2">
+			<div class="slide active">
+				<h1 class="sectionHeader">Projects</h1>
+				<div class="sectionMain">
+					<h5>Press the left and right arrows to look at our projects</h5>
 				</div>
 			</div>
-	    </section>
+		</div>
+		<div class="section" id="section3">
+			<h1 class="sectionHeader">The Team</h1>
+			<div class="sectionMain members">
+			</div>
+		</div>
+		<div class="section" id="section4">
+			<h1 class="sectionHeader">Contact us</h1>
+			<div class="sectionMain">
+				<h5>Coming soon...</h5>
+				<!--<form action="#" method="get" class="contactUsForm">
+					<input type="text" class="contactUsName" name="name" placeholder="Name">
+					<br>
+					<textarea cols="100" rows="20" placeholder="Message" name="content" class="contactUsMessage"></textarea>
+					<br>
+					<input type="submit" name="submit" value="Submit" class="contactUsSubmit">
+				</form>-->
+			</div>
+		</div>
+	</div>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/fullpage.min.js"></script>
+	<script src="assets/js/js.js"></script>
+	<script type="text/javascript" src="assets/js/tooltipster.min.js"></script>
+</body>
 
-		<hr>
-
-	    <section class="container">
-		    <div class="row">
-		    	<div class="col-md-12">
-		    		<div id="contributors" class="well well-sm" style="margin-top: 20px; text-align: center; display: block;">
-			    		<h1><span class="lobster">Foundation</span><span class="os_light"> People</span></h1>
-		    		</div>
-		    	</div>
-		    </div>
-	    </section>
-
-
-		<script src="assets/js/jquery-2.1.1.min.js"></script>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/javascript.js"></script>
-    </body>
 </html>
