Added a loading page to prevent display before styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 </head>
 
 <body>
+	<div id="loadingPage">
+		<div id="loadingCenterParent">
+			<div id="loadingCenterChild">
+				<div class="spinner">
+					<div class="double-bounce1"></div>
+					<div class="double-bounce2"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
