Fixed description (Derp)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="mainTextContainer">
 			<p id="mainTextPre">We Are</p>
 			<h1 id="mainText">FoundationDriven</h1>
-			<p id="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			<p id="caption">FoundationDriven is a team of collaborators, which focuses on plugins and mods for Sponge servers.</p>
 		</div>
 		<div id="projects">
 			<h2 id="projectsTitle">Projects</h2>
