--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <html>
+
 <head>
 	<title>FoundationDriven</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
 	<article id="main">
 		<div id="mainTextContainer">
 			<p id="mainTextPre">We Are</p>
 			<h1 id="mainText">FoundationDriven</h1>
 			<p id="caption">FoundationDriven is a team of collaborators, which focuses on plugins and mods for Sponge servers.</p>
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+				<input type="hidden" name="cmd" value="_s-xclick">
+				<input type="hidden" name="hosted_button_id" value="M86HKTB27Y4HQ">
+				<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
+				<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
+			</form>
 		</div>
 		<div id="projects">
 			<h2 id="projectsTitle">Projects</h2>
@@ -22,4 +30,5 @@
 	<script type="text/javascript" src="js/jquery.simplemodal.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
+
 </html>
