--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <html>
 
 <head>
-	<title>FoundationDriven</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>FoundationDriven // Home</title>
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 </head>
 
 <body>
-	<article id="main">
-		<div id="mainTextContainer">
-			<p id="mainTextPre">We Are</p>
-			<h1 id="mainText">FoundationDriven</h1>
-			<p id="caption">FoundationDriven is a team of collaborators, which focuses on plugins and mods for Sponge servers.</p>
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="M86HKTB27Y4HQ">
-				<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
-				<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
-			</form>
-		</div>
-		<div id="projects">
-			<h2 id="projectsTitle">Projects</h2>
-			<div id="links">
-				<h6>Loading...</h6>
+	<div id="main">
+		<div id="intro">
+			<div class="sectionInner" id="introInner">
+				<div class="sectionTitle" id="introTitle">We are FoundationDriven</div>
+				<div class="sectionContent" id="introContent">and we're creating APIs to make minecraft plugin development,
+				</div>
+				<br><strong>Easier.</strong>
 			</div>
 		</div>
-	</article>
-	<script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="js/jquery.simplemodal.min.js"></script>
+		<div id="nav">
+			<div id="navContainer">
+				<ol id="navList">
+					<li><a href="#">HOME</a></li>
+					<li><a href="projects.html">PROJECTS</a></li>
+				</ol>
+			</div>
+		</div>
+		<div id="newBreed">
+			<div class="sectionInner" id="newBreedInner">
+				<div class="sectionTitle" id="newBreedTitle">A new breed</div>
+				<div class="sectionContent" id="newBreedContent">We're designing our APIs to have a minimal footprint but <strong>big</strong> impact.</div>
+			</div>
+		</div>
+		<div id="code">
+			<div class="sectionInner" id="codeInner">
+				<div class="sectionTitle" id="codeTitle">Less code, more happiness.</div>
+				<div class="sectionContent" id="codeContent">We design our APIs to be minimal and self explanatory so you can get your code finished quicker.</div>
+			</div>
+		</div>
+		<div id="more">
+			<div class="sectionInner" id="moreInner">
+				<div class="sectionTitle" id="moreTitle">So what are you waiting for?</div>
+				<div class="sectionContent" id="moreContent">Head over to the projects page and go go go!</div>
+			</div>
+		</div>
+	</div>
+	<div id="portrait">
+		<h1>Please turn your device landscape</h1>
+	</div>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.sticky-kit.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 
