--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>FoundationDriven // Home</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
