--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="question">
 				<div class="questionTitle">I found a bug in one of your projects!</div>
-				<div class="questionAnswer">We have our own issue tracker so that we can keep track of all the bugs, simply find the project on the projects page and hit the issues button, this will take you to the issue tracker for that project. For a tutorial on how to use our issue tracker click <a href="">here</a>.</div>
+				<div class="questionAnswer">We have our own issue tracker so that we can keep track of all the bugs, simply find the project on the projects page and hit the issues button, this will take you to the issue tracker for that project. For a tutorial on how to use our issue tracker click <a href="http://issues.foundationdriven.tk/projects/meta/wiki/Issue_tracker_basics">here</a>.</div>
 			</div>
 			<div class="question">
 				<div class="questionTitle">I have an idea for a feature / a new project!</div>
@@ -44,7 +44,7 @@
 			</div>
 			<div class="question">
 				<div class="questionTitle">I don't code, Is there any other way I can help out?</div>
-				<div class="questionAnswer">Of course! You can find a full list of other ways you can contribute <a href="">here</a>.</div>
+				<div class="questionAnswer">Of course! You can find a full list of other ways you can contribute <a href="http://issues.foundationdriven.tk/projects/meta/wiki/Ways_to_contribute">here</a>.</div>
 			</div>
 			<div class="question">
 				<div class="questionTitle">This is awesome! Is there any way I can donate?</div>
