Links to new issue tracker ( META-2 #resume #comment Added links to website )

--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
 				<h1 class="projectTitle" id="foundationProjectTitle">Foundation</h1>
 				<p class="projectShortDescription">A suite of APIs for better minecraft plugins</p>
 				<div class="projectLinks" id="foundationProjectLinks">
-					<a href="http://issues.foundationdriven.tk/projects/foundation/issues" class="projectLink">Issues</a>
-					<a href="http://issues.foundationdriven.tk/projects/foundation/wiki" class="projectLink">Wiki</a>
-					<a href="http://issues.foundationdriven.tk/projects/foundation/files" class="projectLink">Download</a>
+					<a href="https://foundationdriven.atlassian.net/browse/FOUN" class="projectLink">Issues</a>
+					<a href="https://foundationdriven.atlassian.net/wiki/display/FOUN/Home" class="projectLink">Wiki</a>
+					<a href="https://foundationdriven.atlassian.net/wiki/display/FOUN/Downloads" class="projectLink">Download</a>
 				</div>
 			</div>
 		</div>
